# stock_SET_data

./: CMakeLists.txt  curl.h  main.cpp  main.h  stock_data3.csv
